<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_pause"
        android:layout_width="@dimen/cv_pause_width"
        android:layout_height="@dimen/cv_pause_height"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="@dimen/cv_pause_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paused"
                android:textStyle="bold"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/tv_select_diff"
                android:textAllCaps="true"
                android:layout_marginBottom="@dimen/tv_paused_margin_bottom"/>

            <Button
                android:id="@+id/btn_pause_resume"
                android:layout_width="@dimen/btn_pause_width"
                android:layout_height="wrap_content"
                android:text="@string/resume"/>

            <Button
                android:id="@+id/btn_pause_restart"
                android:layout_width="@dimen/btn_pause_width"
                android:layout_height="wrap_content"
                android:text="@string/restart"/>

            <Button
                android:id="@+id/btn_pause_menu"
                android:layout_width="@dimen/btn_pause_width"
                android:layout_height="wrap_content"
                android:text="@string/main_menu"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>