<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_curve2">

    <ImageView
        android:id="@+id/iv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_settings_40"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/iv_settings_margin_top"
        android:layout_marginRight="@dimen/iv_settings_margin_right"/>

    <TextView
        android:layout_width="@dimen/tv_app_title_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/tv_app_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/tv_app_title_margin_top"/>

    <Button
        android:id="@+id/btn_play"
        android:layout_width="@dimen/tv_app_title_width"
        android:layout_height="@dimen/btn_menu_height"
        android:layout_gravity="center"
        android:text="@string/play"
        android:textSize="@dimen/btn_menu"
        android:layout_marginTop="@dimen/btn_play_margin_top"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="@dimen/tv_app_title_width"
        android:layout_height="@dimen/btn_menu_height"
        android:layout_gravity="center"
        android:text="@string/exit"
        android:textSize="@dimen/btn_menu"/>

</LinearLayout>