<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/ic_wave">

    <TextView
        android:id="@+id/tv_bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/bonus"
        android:textAllCaps="true"
        android:textSize="@dimen/tv_bonus"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/iv_back_margin_top"
        android:layout_marginRight="@dimen/iv_back_margin_left"/>

    <ImageView
        android:id="@+id/iv_diff_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_white"
        android:layout_marginTop="@dimen/iv_back_margin_top"
        android:layout_marginLeft="@dimen/iv_back_margin_left"/>

    <TextView
        android:id="@+id/tv_select_diff"
        android:layout_width="@dimen/tv_select_diff_width"
        android:layout_height="wrap_content"
        android:text="@string/diff"
        android:textAllCaps="true"
        android:textSize="@dimen/tv_select_diff"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/tv_select_diff_margin_top"
        android:layout_centerHorizontal="true"/>

    <GridLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_select_diff"
        android:rowCount="3"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="60dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:cardCornerRadius="@dimen/cv_diff_radius"
            app:cardElevation="@dimen/cv_diff_elevation"
            android:layout_margin="@dimen/cv_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_horizontal|center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diff_easy"
                    android:textAllCaps="true"
                    android:textSize="@dimen/tv_diff"
                    android:textStyle="bold"
                    android:textColor="@color/purple_500"
                    android:textAlignment="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_highscore"
                        android:layout_marginRight="@dimen/tv_diff_highscore_margin_right"
                        android:textSize="@dimen/tv_diff_highscore"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/tv_easy_highscore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_score"
                        android:textSize="@dimen/tv_diff_highscore"
                        android:textAlignment="center"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:cardCornerRadius="@dimen/cv_diff_radius"
            app:cardElevation="@dimen/cv_diff_elevation"
            android:layout_margin="@dimen/cv_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_horizontal|center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diff_medium"
                    android:textAllCaps="true"
                    android:textSize="@dimen/tv_diff"
                    android:textStyle="bold"
                    android:textColor="@color/purple_500"
                    android:textAlignment="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_highscore"
                        android:layout_marginRight="@dimen/tv_diff_highscore_margin_right"
                        android:textSize="@dimen/tv_diff_highscore"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/tv_medium_highscore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_score"
                        android:textSize="@dimen/tv_diff_highscore"
                        android:textAlignment="center"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:cardCornerRadius="@dimen/cv_diff_radius"
            app:cardElevation="@dimen/cv_diff_elevation"
            android:layout_margin="@dimen/cv_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_horizontal|center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diff_hard"
                    android:textAllCaps="true"
                    android:textSize="@dimen/tv_diff"
                    android:textStyle="bold"
                    android:textColor="@color/purple_500"
                    android:textAlignment="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_highscore"
                        android:layout_marginRight="@dimen/tv_diff_highscore_margin_right"
                        android:textSize="@dimen/tv_diff_highscore"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/tv_hard_highscore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_score"
                        android:textSize="@dimen/tv_diff_highscore"
                        android:textAlignment="center"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

</RelativeLayout>